Add canvas for screen window

--- a/www/index.html
+++ b/www/index.html
@@ -26,11 +26,15 @@
      td:hover {
          background: #cfcfcf;
      }
+     #gameboy-screen-canvas {
+         border: 2px solid red;
+     }
     </style>
 
   </head>
   <body>
-    <canvas id="gameboy-canvas"></canvas>
+    <canvas id="gameboy-background-canvas"></canvas>
+    <canvas id="gameboy-screen-canvas"></canvas>
     <div id="pc-counter"></div>
     <div id="memory-viewer"></div>
 
