Show screen in new canvas

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
   </head>
   <body>
     <canvas id="gameboy-background-canvas"></canvas>
+    <canvas id="gameboy-screen-canvas"></canvas>
     <div id="pc-counter"></div>
     <div id="memory-viewer"></div>
 
