Speed up rendering and execution

--- a/www/index.html
+++ b/www/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
-    <style>
-     body {
-         position: absolute;
-         top: 0;
-         left: 0;
-         width: 100%;
-         height: 100%;
-     }
-     table {
-         border: 1px solid orange;
-         font-family: monospace;
-     }
+    <head>
+        <meta charset="utf-8">
+        <title>Libations</title>
+        <style>
+         body {
+             position: absolute;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+         }
+         table {
+             border: 1px solid orange;
+             font-family: monospace;
+         }
 
-     tr {
-         margin: 10px;
-     }
+         tr {
+             margin: 10px;
+         }
 
-     td {
-         padding: 0px 8px;
-     }
-     td:hover {
-         background: #cfcfcf;
-     }
-     #gameboy-screen-canvas {
-         border: 2px solid red;
-     }
-    </style>
+         td {
+             padding: 0px 8px;
+         }
+         td:hover {
+             background: #cfcfcf;
+         }
+         #gameboy-screen-canvas {
+             border: 2px solid red;
+         }
+        </style>
 
-  </head>
-  <body>
-    <canvas id="gameboy-background-canvas"></canvas>
-    <canvas id="gameboy-screen-canvas"></canvas>
-    <div id="pc-counter"></div>
-    <div id="memory-viewer"></div>
+    </head>
+    <body>
+        <canvas id="gameboy-background-canvas"></canvas>
+        <canvas id="gameboy-screen-canvas"></canvas>
+        <canvas id="char-map-actual-canvas" style="display:none;"></canvas>
+        <canvas id="char-map-debug-canvas"></canvas>
+        <div id="pc-counter"></div>
+        <div id="memory-viewer"></div>
 
-</div>
-
-  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-  <script src="./bootstrap.js"></script>
-  </body>
+        <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+        <script src="./bootstrap.js"></script>
+    </body>
 </html>
