Add break-points debugger

--- a/www/index.html
+++ b/www/index.html
@@ -41,10 +41,19 @@
       .channel .binary-val i {
         color: #cfcfcf;
       }
+      .break-point-wrapper {
+        padding: 20px;
+        border: 1px solid blue;
+        margin: 20px 0px;
+        width: fit-content;
+        display: flex;
+        flex-flow: column;
+      }
     </style>
   </head>
   <body>
     <div id="sound-container"></div>
+    <div id="break-point-container"></div>
     <input id="play" type="button" value="⏯" />
     (headphone users, please make sure your volume is not too loud!)
 
