--- a/www/index.html
+++ b/www/index.html
@@ -109,7 +109,7 @@
         id="fm_amount"
       />
     </div>
-    <canvas id="char-map-actual-canvas-rust"></canvas>
+    <canvas hidden id="char-map-actual-canvas-rust"></canvas>
     <canvas id="char-map-debug-canvas-rust"></canvas>
     <canvas id="gameboy-background-canvas-rust"></canvas>
     <canvas id="gameboy-screen-canvas-rust"></canvas>
