--- a/www/index.html
+++ b/www/index.html
@@ -113,6 +113,7 @@
     <canvas id="char-map-debug-canvas-rust"></canvas>
     <canvas id="gameboy-background-canvas-rust"></canvas>
     <canvas id="gameboy-screen-canvas-rust"></canvas>
+    <pre id="serial-debug"></pre>
     <div id="pc-counter"></div>
     <div id="memory-viewer"></div>
 
