--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,7 @@
     <div class="flex-wrapper">
       <div id="break-point-container"></div>
       <div id="mbc-container"></div>
+      <div id="lcd-container"></div>
     </div>
     <canvas hidden id="char-map-actual-canvas-rust"></canvas>
     <canvas id="char-map-debug-canvas-rust"></canvas>
